# FileExplorerMacOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_Windows.md  main.cpp
h/: DraggableIcon.h  FileTree.h  IconFont.h  IconTexturePaths.h  IconViewWindow.h  LoadingWindow.h  SearchWindow.h  ThemePrompt.h  TreeNode.h  TreeViewWindow.h
readme_images/: Rešenje o imenovanju - elektro nadzor DELTA_cd9a7aba-fcfb-416a-840d-4e0353150dd1.docx
src/: DraggableIcon.cpp  FileTree.cpp  IconViewWindow.cpp  LoadingWindow.cpp  SearchWindow.cpp  ThemePrompt.cpp  TreeNode.cpp  TreeViewWindow.cpp
